# pizerocamera

./: .gitignore  Cargo.toml  README.md  base_settings.toml  settings.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  cross-file.txt  devcontainer.json  pythoncrossbuild.sh
python-camera/: main.py
python-camera/typings/libcamera/: _libcamera.pyi
python-camera/typings/picamera2/: __init__.pyi  configuration.pyi  controls.pyi  converters.pyi  dma_heap.pyi  job.pyi  metadata.pyi  picamera2.pyi  request.pyi  sensor_format.pyi  utils.pyi
python-camera/typings/picamera2/allocators/: __init__.pyi  allocator.pyi  dmaallocator.pyi  libcameraallocator.pyi  persistent_allocator.pyi
python-camera/typings/picamera2/devices/: __init__.pyi
python-camera/typings/picamera2/devices/hailo/: __init__.pyi  hailo.pyi
python-camera/typings/picamera2/devices/imx500/: __init__.pyi  imx500.pyi  postprocess.pyi  postprocess_efficientdet_lite0.pyi  postprocess_nanodet.pyi  postprocess_yolov5.pyi  postprocess_yolov8.pyi
python-camera/typings/picamera2/encoders/: __init__.pyi  encoder.pyi  h264_encoder.pyi  jpeg_encoder.pyi  libav_h264_encoder.pyi  libav_mjpeg_encoder.pyi  mjpeg_encoder.pyi  multi_encoder.pyi  v4l2_encoder.pyi
python-camera/typings/picamera2/outputs/: __init__.pyi  circularoutput.pyi  circularoutput2.pyi  ffmpegoutput.pyi  fileoutput.pyi  output.pyi  pyavoutput.pyi  splittableoutput.pyi
python-camera/typings/picamera2/previews/: __init__.pyi  drm_preview.pyi  gl_helpers.pyi  null_preview.pyi  q_gl_picamera2.pyi  q_picamera2.pyi  qt.pyi  qt_compatibility.pyi  qt_previews.pyi
src/: endpoints.rs  main.rs  ntp_sync.rs  settings.rs  startup.rs
src/camera/: controls.rs  mod.rs  python_camera.rs
src/functions/: camera.rs  command.rs  mod.rs  ntp.rs  status.rs  update.rs
src/functions/requests/: camera.rs  mod.rs  ntp.rs
src/functions/responses/: camera.rs  mod.rs  update.rs
src/updater/: mod.rs  update.rs  update_error.rs
src/utils/: command_executor.rs  http_error.rs  mod.rs  mqtt_utils.rs  success_wrapper.rs
(+2 files in other folders)
