[package]
name = "pizerocamera"
version = "0.1.4"
edition = "2024"

[dependencies]
rumqttc = { version = "0.24.0", features = ["use-native-tls"], default-features = false }
tokio = { version = "1.46.1", features = ["full"] }
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
self-replace = { version = "1.5.0" }
tempfile = "3.20.0"
reqwest = { version = "0.12.22", features = ["native-tls", "json", "multipart"], default-features = false }
thiserror = "2.0.12"
anyhow = "1.0.98"
#libcamera = "0.4.0"
#libcamera = { git = "https://github.com/lit-robotics/libcamera-rs.git", rev = "f4d581756acb9aba89f756b0b908eb446ad9ecf44"}
openssl = { version = "0.10", features = ["vendored"] }
pyo3 = { version = "0.25.1", features = ["abi3-py311", "auto-initialize"] }
bytes = "1.10.1"
semver = "1.0.26"
uuid = {  version = "1.17.0", features = ["serde"] }
tokio-timerfd = "0.2.0"
jpeg-encoder = "0.6.1"
numpy = "0.25.0"