[package]
name = "pizerocamera"
version = "0.1.8"
edition = "2024"

[dependencies]
rumqttc = { version = "0.25.0", features = ["use-native-tls"], default-features = false }
tokio = { version = "1.47.1", features = ["full"] }
config = "0.15.16"
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
self-replace = { version = "1.5.0" }
tempfile = "3.23.0"
reqwest = { version = "0.12.23", features = ["native-tls", "json", "multipart"], default-features = false }
thiserror = "2.0.16"
anyhow = "1.0.100"
#libcamera = "0.4.0"
#libcamera = { git = "https://github.com/lit-robotics/libcamera-rs.git", rev = "f4d581756acb9aba89f756b0b908eb446ad9ecf44"}
openssl = { version = "0.10.73", features = ["vendored"] }
pyo3 = { version = "0.26.0", features = ["abi3-py311", "auto-initialize"] }
bytes = "1.10.1"
semver = "1.0.27"
uuid = {  version = "1.18.1", features = ["serde"] }
jpeg-encoder = "0.6.1"
numpy = "0.26.0"
nix = { version = "0.30.1", features = ["time"]}

[profile.release]
lto = "fat"
codegen-units = 1
